RESOLVED FIXED66112
Initialize threading before running any tests
https://bugs.webkit.org/show_bug.cgi?id=66112
Summary Initialize threading before running any tests
Anders Carlsson
Reported 2011-08-11 16:07:04 PDT
Initialize threading before running any tests
Attachments
Patch (1.15 KB, patch)
2011-08-11 16:08 PDT, Anders Carlsson
abarth: review+
Anders Carlsson
Comment 1 2011-08-11 16:08:08 PDT
Anders Carlsson
Comment 2 2011-08-11 16:14:25 PDT
This is to fix an assertion seen on the bots when running tests, due to threading not being initialized: ASSERTION FAILED: m_key != PTHREAD_KEYS_MAX /Volumes/Big/slave/snowleopard-intel-debug/build/Source/JavaScriptCore/wtf/ThreadIdentifierDataPthreads.cpp(60) : static WTF::ThreadIdentifier WTF::ThreadIdentifierData::identifier() 1 WTF::ThreadIdentifierData::identifier() 2 WTF::currentThread() 3 WTF::ThreadRestrictionVerifier::setShared(bool) 4 WTF::RefCountedBase::ref() 5 WKRetain 6 WebKit::WKRetainPtr<OpaqueWKString const*>::WKRetainPtr(WebKit::WKRetainPtr<OpaqueWKString const*> const&) 7 testing::AssertionResult TestWebKitAPI::Util::assertWKStringEqual<char const*, WebKit::WKRetainPtr<OpaqueWKString const*> >(char const*, char const*, char const*, WebKit::WKRetainPtr<OpaqueWKString const*>) 8 TestWebKitAPI::WebKit2_WKPreferencesDefaults_Test::TestBody() 9 testing::Test::Run() 10 testing::internal::TestInfoImpl::Run() 11 testing::TestCase::Run() 12 testing::internal::UnitTestImpl::RunAllTests() 13 testing::UnitTest::Run() 14 TestWebKitAPI::TestsController::run(int, char**) 15 main 16 start
Anders Carlsson
Comment 3 2011-08-11 16:18:28 PDT
Note You need to log in before you can comment on or make changes to this bug.