Initialize threading before running any tests https://bugs.webkit.org/show_bug.cgi?id=66112

Reviewed by Adam Barth.

* TestWebKitAPI/TestsController.cpp:
(TestWebKitAPI::TestsController::TestsController):


git-svn-id: svn://svn.chromium.org/blink/trunk@92887 bbb929c8-8fbe-4397-9dbb-9b2b20218538