third_party/WebKit/Tools/TestWebKitAPI/TestsController.cpp
@@ -27,6 +27,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "TestsController.h"
 
 #include <gtest/gtest.h>
+#include <wtf/Threading.h>
 
 namespace TestWebKitAPI {
 
@@ -38,6 +39,7 @@ TestsController& TestsController::shared()
 
 TestsController::TestsController()
 {
+    WTF::initializeThreading();
 }
 
 bool TestsController::run(int argc, char** argv)
